Exercise 1 - Basic kubectl/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: workshop-service
  namespace: workshop
spec:
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
  selector:
    app: nginx
